# cdk-cr-dependency-issue

./: .gitignore  README.md  app.py  pyproject.toml
main/: elastic_ip.py  main.py  wait_for_eip_dissociation.py
main/lambda/: main.py
